test/should_pass/basic_001.grg
actions basic_001;

rule r {
	pattern {
	}
	replace {
	}
}

