test/should_fail/inh_attrib_016.grg
actions inh_attrib_016 using inh_attrib_model_016;

rule r {
	pattern {
	}
	replace {
	}
}

